--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,10 @@
 name: multi_validator
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-# homepage: https://www.example.com
+repository: https://github.com/alfredoUcar/multi-validator
 
 environment:
   sdk: '>=2.14.4 <3.0.0'
-
-
-# dependencies:
-#   path: ^1.8.0
 
 dev_dependencies:
   lints: ^1.0.0
